--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,9 @@ bind-key l select-pane -R
 bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel 'xclip -se c -i'
+bind-key -r f run-shell "tmux neww ~/.local/scripts/tmux-sessionizer.sh"
+bind-key -r F run-shell "~/.local/scripts/tmux-sessionizer.sh ~/repos"
+bind-key -r V run-shell "~/.local/scripts/tmux-sessionizer.sh ~/.dotfiles/nvim/.config/nvim"
 
 bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
 bind K confirm kill-session
