--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,3 @@
-[user]
-	name = John Konecny
-	email = 24961694+jfkonecn@users.noreply.github.com
 [credential]
 	helper = manager
 	helper =
@@ -11,3 +8,9 @@
 	editor = nvim
 [init]
 	defaultBranch = main
+[includeIf "gitdir:~/oss/"]
+    path = ~/.gitconfig-oss
+[includeIf "gitdir:~/.dotfiles/"]
+    path = ~/.gitconfig-oss
+[includeIf "gitdir:~/work/"]
+    path = ~/.gitconfig-work
