--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,8 @@ set -g @plugin 'jimeh/tmuxifier'
 set -g @plugin 'dracula/tmux'
 set -g @dracula-show-powerline true
 set -g @dracula-show-flags true
-set -g @dracula-plugins "git cpu-usage gpu-usage ram-usage weather time"
+# set -g @dracula-plugins "git cpu-usage gpu-usage ram-usage weather time"
+set -g @dracula-plugins "cpu-usage gpu-usage ram-usage"
 set -g @dracula-show-fahrenheit false
 set -g @dracula-ram-usage-label "RAM"
 set -g @dracula-show-flags true
