--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -14,3 +14,5 @@
     path = ~/.gitconfig-oss
 [includeIf "gitdir:~/work/"]
     path = ~/.gitconfig-work
+[credential "https://github.com"]
+	username = jfkonecn
