update gitconfig and brew file

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -16,3 +16,8 @@
     path = ~/.gitconfig-work
 [credential "https://github.com"]
 	username = jfkonecn
+[filter "lfs"]
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
