--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -104,6 +104,7 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
+bindsym $mod+z focus child
 
 # focus the child container
 #bindsym $mod+d focus child
