--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -9,6 +9,9 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
+# Fix Ubuntu Gnome
+exec --no-startup-id /usr/libexec/gsd-xsettings
+
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
