--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -2,6 +2,8 @@
 unbind r
 bind r source-file ~/.tmux.conf
 
+set-option -g default-shell /bin/zsh
+
 setw -g mouse on
 
 # use hjkl to move around windows
