Added script for json node

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ nvim/.config/nvim/spell/
 bin/.local/
 !bin/.local/scripts/tmux-sessionizer.sh
 !bin/.local/scripts/find-string-json.sh
+!bin/.local/scripts/llm-text-search.sh
 db/
