--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -3,3 +3,5 @@ font-feature = -liga
 font-feature = -calt
 font-feature = -dlig
 theme = Builtin Pastel Dark
+background-opacity = 0.7
+background-blur = true
