--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -49,7 +49,7 @@ floating_modifier $mod
 
 # start a terminal
 # bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+Return exec $HOME/oss/ghostty/zig-out/bin/ghostty
+bindsym $mod+Return exec ghostty
 
 # kill focused window
 bindsym $mod+Shift+q kill
