Added image preview

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,4 +46,10 @@ set -g status-position top
 
 set -g default-terminal "tmux-256color"
 
+# Start of image.nvim configuration
+set -gq allow-passthrough on
+set -g visual-activity off
+set-option -g focus-events on
+# End of image.nvim configuration
+
 run '~/.tmux/plugins/tpm/tpm'
